[gd_scene load_steps=49 format=3 uid="uid://clc3hhclkd2ay"]

[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/shape_closed.gd" id="1_044su"]
[ext_resource type="Script" path="res://src/entities/sap_puddle/sap_puddle.gd" id="1_m3v0x"]
[ext_resource type="Script" path="res://addons/rmsmartshape/vertex_properties.gd" id="2_ofw45"]
[ext_resource type="AudioStream" uid="uid://y7itb71423w2" path="res://src/entities/sap_puddle/assets/sfx/Sap Puddle 1.mp3" id="2_q8dsk"]
[ext_resource type="AudioStream" uid="uid://6j2vw1w520f" path="res://src/entities/sap_puddle/assets/sfx/Sap Puddle 2 reverb.mp3" id="3_3usqx"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point.gd" id="3_snps7"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point_array.gd" id="4_m321g"]
[ext_resource type="AudioStream" uid="uid://cvevtkd5y7ef3" path="res://src/entities/sap_puddle/assets/sfx/Sap Puddle 2.mp3" id="4_xr4rg"]
[ext_resource type="AudioStream" uid="uid://dbgrrvkbnca0s" path="res://src/entities/sap_puddle/assets/sfx/Sap Puddle 3.mp3" id="5_7bwt2"]
[ext_resource type="Script" path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" id="5_vtssg"]
[ext_resource type="Script" path="res://addons/rmsmartshape/materials/shape_material.gd" id="7_0gky3"]
[ext_resource type="Texture2D" uid="uid://7us5spab1un" path="res://assets/sprite/sap/sap_texture_64.png" id="11_ahkcq"]
[ext_resource type="PackedScene" uid="uid://cdd0eibgoqno0" path="res://src/entities/sap_puddle/AgentMarker.tscn" id="13_v0r4v"]

[sub_resource type="Resource" id="Resource_otqsh"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ve2th"]
script = ExtResource("3_snps7")
position = Vector2(0, 0)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_otqsh")

[sub_resource type="Resource" id="Resource_no0ep"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_osihl"]
script = ExtResource("3_snps7")
position = Vector2(-43.625, 0)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_no0ep")

[sub_resource type="Resource" id="Resource_32tdy"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_s8ek4"]
script = ExtResource("3_snps7")
position = Vector2(-36.625, -9)
point_in = Vector2(-6.25, 2.125)
point_out = Vector2(2.125, -1.25)
properties = SubResource("Resource_32tdy")

[sub_resource type="Resource" id="Resource_po2g5"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_s1350"]
script = ExtResource("3_snps7")
position = Vector2(-32.375, -17.375)
point_in = Vector2(-2.25, 3.75)
point_out = Vector2(1.75, -5.125)
properties = SubResource("Resource_po2g5")

[sub_resource type="Resource" id="Resource_w73lm"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_3t6x5"]
script = ExtResource("3_snps7")
position = Vector2(-24.375, -26.5)
point_in = Vector2(0.375, 0.375)
point_out = Vector2(-0.375, -0.375)
properties = SubResource("Resource_w73lm")

[sub_resource type="Resource" id="Resource_ii7ad"]
script = ExtResource("2_ofw45")
texture_idx = -1
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_6mir2"]
script = ExtResource("3_snps7")
position = Vector2(-14.875, -32.25)
point_in = Vector2(-4.75, 1.125)
point_out = Vector2(4.75, -1.125)
properties = SubResource("Resource_ii7ad")

[sub_resource type="Resource" id="Resource_ww2vf"]
script = ExtResource("2_ofw45")
texture_idx = 4
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_vf4ua"]
script = ExtResource("3_snps7")
position = Vector2(-4.125, -33.375)
point_in = Vector2(-5.25, 1.625)
point_out = Vector2(5.25, -1.625)
properties = SubResource("Resource_ww2vf")

[sub_resource type="Resource" id="Resource_dtxv7"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_a7160"]
script = ExtResource("3_snps7")
position = Vector2(3.25, -36.5)
point_in = Vector2(-3.625, 0.5)
point_out = Vector2(3.625, -0.5)
properties = SubResource("Resource_dtxv7")

[sub_resource type="Resource" id="Resource_1u0jg"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_vogsq"]
script = ExtResource("3_snps7")
position = Vector2(15.125, -35.875)
point_in = Vector2(-3.625, -0.625)
point_out = Vector2(3.625, 0.625)
properties = SubResource("Resource_1u0jg")

[sub_resource type="Resource" id="Resource_6x78d"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_4acpx"]
script = ExtResource("3_snps7")
position = Vector2(22.625, -31.625)
point_in = Vector2(-2.5, -3.75)
point_out = Vector2(2.5, 1.625)
properties = SubResource("Resource_6x78d")

[sub_resource type="Resource" id="Resource_6p2c3"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_r1751"]
script = ExtResource("3_snps7")
position = Vector2(28.875, -26.75)
point_in = Vector2(-1, -0.875)
point_out = Vector2(1, 0.875)
properties = SubResource("Resource_6p2c3")

[sub_resource type="Resource" id="Resource_r4onw"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ckc4y"]
script = ExtResource("3_snps7")
position = Vector2(33.875, -21.25)
point_in = Vector2(-1.625, -3.5)
point_out = Vector2(1.75, 4.5)
properties = SubResource("Resource_r4onw")

[sub_resource type="Resource" id="Resource_f4tsh"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_r5x6a"]
script = ExtResource("3_snps7")
position = Vector2(35.25, -13)
point_in = Vector2(-2.75, -2.5)
point_out = Vector2(2.75, 2.5)
properties = SubResource("Resource_f4tsh")

[sub_resource type="Resource" id="Resource_jg2mh"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_4iksu"]
script = ExtResource("3_snps7")
position = Vector2(41.125, -5.25)
point_in = Vector2(-3, -2.25)
point_out = Vector2(3, 2.25)
properties = SubResource("Resource_jg2mh")

[sub_resource type="Resource" id="Resource_lq5h8"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_e80yt"]
script = ExtResource("3_snps7")
position = Vector2(45.875, -0.25)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_lq5h8")

[sub_resource type="Resource" id="Resource_h7sfu"]
script = ExtResource("2_ofw45")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_dwokn"]
script = ExtResource("3_snps7")
position = Vector2(0, 0)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_h7sfu")

[sub_resource type="Resource" id="Resource_3mjpa"]
script = ExtResource("4_m321g")
_points = {
0: SubResource("Resource_ve2th"),
1: SubResource("Resource_osihl"),
2: SubResource("Resource_s8ek4"),
3: SubResource("Resource_s1350"),
4: SubResource("Resource_3t6x5"),
5: SubResource("Resource_6mir2"),
6: SubResource("Resource_vf4ua"),
7: SubResource("Resource_a7160"),
8: SubResource("Resource_vogsq"),
9: SubResource("Resource_4acpx"),
10: SubResource("Resource_r1751"),
11: SubResource("Resource_ckc4y"),
12: SubResource("Resource_r5x6a"),
13: SubResource("Resource_4iksu"),
14: SubResource("Resource_e80yt"),
15: SubResource("Resource_dwokn")
}
_point_order = PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15)
_constraints = {
Vector2i(0, 15): 15
}
_next_key = 16
_material_overrides = {}
tessellation_stages = 3
tessellation_tolerance = 6.0
curve_bake_interval = 20.0

[sub_resource type="Resource" id="Resource_og4nb"]
script = ExtResource("7_0gky3")
_edge_meta_materials = Array[ExtResource("5_vtssg")]([])
fill_textures = Array[Texture2D]([ExtResource("11_ahkcq")])
fill_texture_z_index = -10
fill_texture_show_behind_parent = false
fill_texture_scale = 1.0
fill_texture_absolute_position = false
fill_texture_absolute_rotation = false
fill_texture_offset = Vector2(0, 0)
fill_texture_angle_offset = 0.0
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4or5r"]
radius = 45.2214

[node name="SapPuddle" type="Node2D"]
script = ExtResource("1_m3v0x")
SFX_sap_collected = Array[AudioStream]([ExtResource("2_q8dsk"), ExtResource("3_3usqx"), ExtResource("4_xr4rg"), ExtResource("5_7bwt2")])
metadata/_edit_horizontal_guides_ = [-49.0]
metadata/_edit_vertical_guides_ = [-44.0, 46.0]

[node name="PuddleMesh" type="Node2D" parent="."]
texture_repeat = 2
script = ExtResource("1_044su")
_points = SubResource("Resource_3mjpa")
shape_material = SubResource("Resource_og4nb")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -20)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 22)
shape = SubResource("CircleShape2D_4or5r")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_mask = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, -43.625, 0, -43.4102, -1.10742, -42.4688, -3.70312, -41.5864, -5.21851, -40.3555, -6.69727, -39.5919, -7.38034, -38.7202, -8.00317, -37.7336, -8.54874, -36.625, -9, -36.2518, -9.25885, -35.9246, -9.56494, -35.6365, -9.91571, -35.3809, -10.3086, -34.5469, -12.25, -33.6895, -14.6602, -32.375, -17.375, -31.5134, -19.2231, -30.334, -20.9102, -27.5781, -23.7188, -25.2207, -25.6367, -24.5393, -26.2104, -24.3838, -26.392, -24.375, -26.5, -24.3823, -26.614, -24.2693, -26.8086, -23.7168, -27.3984, -21.5469, -29.0938, -18.416, -30.9297, -16.6624, -31.6953, -14.875, -32.25, -11.9297, -32.6719, -7.35156, -32.6719, -4.125, -33.375, -1.26758, -34.4785, 0.707764, -35.72, 1.30664, -36.0293, 2.10767, -36.2888, 3.25, -36.5, 9.1875, -36.6094, 15.125, -35.875, 17.4746, -35.4746, 18.4319, -35.2444, 19.2969, -34.9219, 20.1091, -34.4529, 20.9082, -33.7832, 22.625, -31.625, 28.875, -26.75, 31.1406, -24.9844, 32.5488, -23.4629, 33.2346, -22.4553, 33.875, -21.25, 34.3237, -19.7061, 34.4414, -18.4141, 34.1875, -16.375, 34.0679, -15.5225, 34.065, -15.1149, 34.1211, -14.7109, 34.2519, -14.3041, 34.4731, -13.8877, 34.8006, -13.4552, 35.25, -13, 36.1689, -12.0415, 36.9062, -11.0508, 39.3281, -7.05859, 40.124, -6.12646, 41.125, -5.25, 43.1328, -3.51953, 44.625, -1.90625, 45.875, -0.25, 0, 0)
disabled = true

[node name="AgentMarkers" type="Node2D" parent="."]

[node name="Marker2D" parent="AgentMarkers" instance=ExtResource("13_v0r4v")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
